<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".view.FirstAdActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/first_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/first_inner_toolbar"
                style="@style/Widget.MaterialComponents.ActionBar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar_color"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="@drawable/ic_arrow_back_screen"
                app:navigationIconTint="@color/white"
                app:title="@string/first_ad_toolbar_tittle"
                app:titleTextAppearance="@style/MyCustomToolbarTitleStyle"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="80dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/first_first_line"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:text="@string/first_ad_text"
                android:textSize="25sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_city"
                style="@style/main_button_style"
                android:layout_margin="40dp"
                android:text="@string/btn_change_city" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />


        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/first_adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="MEDIUM_RECTANGLE"
            ads:adUnitId="@string/banner_id"
            ads:layout_constraintBottom_toBottomOf="parent"
            ads:layout_constraintEnd_toEndOf="parent"
            ads:layout_constraintStart_toStartOf="parent"
            ads:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
