<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".view.CitySearchActivity">


        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/firstL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/city_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/city_inner_toolbar"
                    style="@style/Widget.MaterialComponents.ActionBar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/toolbar_color"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/ic_arrow_back_screen"
                    app:navigationIconTint="@color/white"
                    app:title="@string/city_inner_toolbar"
                    app:titleTextAppearance="@style/MyCustomToolbarTitleStyle"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_search_layout"
                style="@style/MyTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/city_search_layout"
                app:boxStrokeColor="@color/white"
                app:boxStrokeErrorColor="@color/black"
                app:endIconDrawable="@drawable/icon_search"
                app:endIconMode="custom"
                app:startIconDrawable="@drawable/ic_location">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_search_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZабвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯҐґЄєІіЇї"
                    android:fontFamily="@font/inter_medium"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_city_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/inter_medium"
                android:text="@string/btn_city_search"
                android:textColor="@color/white" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/city_result_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:scrollbars="vertical" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/secondL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_id"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
