<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".view.DailyWeatherActivity">

        <LinearLayout
            android:id="@+id/firstL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/daily_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/daily_inner_toolbar"
                    style="@style/Widget.MaterialComponents.ActionBar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/toolbar_color"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/ic_arrow_back_screen"
                    app:navigationIconTint="@color/white"
                    app:title="@string/daily_inner_toolbar"
                    app:titleTextAppearance="@style/MyCustomToolbarTitleStyle"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daily_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hint_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:text="@string/lick_to_see_more"/>


        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/secondL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_main_bottom_sheets"
                android:orientation="vertical"
                app:behavior_peekHeight="30dp"
                app:behavior_hideable="false"
                android:visibility="invisible"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_main_bottom_sheets_swiper"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"/>

                <include layout="@layout/day_info"
                    android:id="@+id/day_info"/>

            </LinearLayout>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/secondL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_id"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>